--- a/requirements.txt
+++ b/requirements.txt
@@ -14,19 +14,24 @@ cycler==0.11.0
 cymem==2.0.5
 debugpy==1.5.1
 decorator==5.1.1
-en-core-web-sm==2.3.1
+# en-core-web-sm==2.3.1
 entrypoints==0.3
+Flask==2.0.2
 fonttools==4.25.0
 idna==3.3
 importlib-metadata==4.8.2
 ipykernel==6.7.0
 ipython==7.31.1
+itsdangerous==2.0.1
 jedi==0.18.1
+Jinja2==3.0.2
 joblib==1.1.0
+jsonify==0.5
 jsonschema==3.0.2
 jupyter-client==7.1.1
 jupyter-core==4.9.1
 kiwisolver==1.3.1
+MarkupSafe==2.0.1
 matplotlib==3.5.0
 matplotlib-inline==0.1.3
 mkl-fft==1.3.1
@@ -78,6 +83,7 @@ typing-extensions==3.10.0.2
 urllib3==1.26.7
 wasabi==0.8.2
 wcwidth==0.2.5
+Werkzeug==2.0.2
 wheel==0.37.1
 wordcloud==1.8.1
 zipp==3.7.0
