--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,6 @@ cycler==0.11.0
 cymem==2.0.5
 debugpy==1.5.1
 decorator==5.1.1
-# en-core-web-sm==2.3.1
 entrypoints==0.3
 Flask==2.0.2
 fonttools==4.25.0
@@ -56,7 +55,7 @@ preshed==3.0.5
 prompt-toolkit==3.0.24
 ptyprocess==0.7.0
 pycparser==2.21
-pygame==1.9.6
+# pygame==1.9.6
 Pygments==2.11.2
 pyOpenSSL==21.0.0
 pyparsing==3.0.4
@@ -73,6 +72,7 @@ seaborn==0.11.2
 setuptools==58.0.4
 six==1.16.0
 spacy==2.3.5
+en-core-web-sm==2.3.1
 srsly==1.0.5
 thinc==7.4.5
 threadpoolctl==2.2.0
