--- a/requirements.txt
+++ b/requirements.txt
@@ -72,7 +72,7 @@ seaborn==0.11.2
 setuptools==58.0.4
 six==1.16.0
 spacy==2.3.5
-en-core-web-sm==2.3.1
+# en-core-web-sm==2.3.1
 srsly==1.0.5
 thinc==7.4.5
 threadpoolctl==2.2.0
