--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ murmurhash==1.0.5
 nest-asyncio==1.5.4
 nltk==3.6.5
 numexpr==2.8.1
-numpy==1.21.2
+numpy==1.21.4
 olefile==0.46
 packaging==21.3
 pandas==1.3.5
@@ -87,3 +87,4 @@ Werkzeug==2.0.2
 wheel==0.37.1
 wordcloud==1.8.1
 zipp==3.7.0
+gunicorn
