--- a/requirements.txt
+++ b/requirements.txt
@@ -1,90 +1,90 @@
-attrs==21.4.0
-backcall==0.2.0
-backports.functools-lru-cache==1.6.4
-blis==0.7.4
-Bottleneck==1.3.2
-brotlipy==0.7.0
-catalogue==1.0.0
-certifi==2021.10.8
-cffi==1.14.6
-charset-normalizer==2.0.4
-click==8.0.3
-cryptography==36.0.0
-cycler==0.11.0
-cymem==2.0.5
-debugpy==1.5.1
-decorator==5.1.1
-entrypoints==0.3
+# attrs==21.4.0
+# backcall==0.2.0
+# backports.functools-lru-cache==1.6.4
+# blis==0.7.4
+# Bottleneck==1.3.2
+# brotlipy==0.7.0
+# catalogue==1.0.0
+# certifi==2021.10.8
+# cffi==1.14.6
+# charset-normalizer==2.0.4
+# click==8.0.3
+# cryptography==36.0.0
+# cycler==0.11.0
+# cymem==2.0.5
+# debugpy==1.5.1
+# decorator==5.1.1
+# entrypoints==0.3
 Flask==2.0.2
-fonttools==4.25.0
-idna==3.3
-importlib-metadata==4.8.2
-ipykernel==6.7.0
-ipython==7.31.1
-itsdangerous==2.0.1
-jedi==0.18.1
-Jinja2==3.0.2
-joblib==1.1.0
+# fonttools==4.25.0
+# idna==3.3
+# importlib-metadata==4.8.2
+# ipykernel==6.7.0
+# ipython==7.31.1
+# itsdangerous==2.0.1
+# jedi==0.18.1
+# Jinja2==3.0.2
+# joblib==1.1.0
 jsonify==0.5
 jsonschema==3.0.2
 jupyter-client==7.1.1
 jupyter-core==4.9.1
-kiwisolver==1.3.1
-MarkupSafe==2.0.1
+# kiwisolver==1.3.1
+# MarkupSafe==2.0.1
 matplotlib==3.5.0
-matplotlib-inline==0.1.3
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
-munkres==1.1.4
-murmurhash==1.0.5
-nest-asyncio==1.5.4
+# matplotlib-inline==0.1.3
+# mkl-fft==1.3.1
+# mkl-random==1.2.2
+# mkl-service==2.4.0
+# munkres==1.1.4
+# murmurhash==1.0.5
+# nest-asyncio==1.5.4
 nltk==3.6.5
-numexpr==2.8.1
+# numexpr==2.8.1
 numpy==1.21.4
-olefile==0.46
-packaging==21.3
+# olefile==0.46
+# packaging==21.3
 pandas==1.3.5
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.4.0
+# parso==0.8.3
+# pexpect==4.8.0
+# pickleshare==0.7.5
+# Pillow==8.4.0
 pip==21.2.2
-plac==1.1.0
-preshed==3.0.5
-prompt-toolkit==3.0.24
-ptyprocess==0.7.0
-pycparser==2.21
+# plac==1.1.0
+# preshed==3.0.5
+# prompt-toolkit==3.0.24
+# ptyprocess==0.7.0
+# pycparser==2.21
 # pygame==1.9.6
-Pygments==2.11.2
-pyOpenSSL==21.0.0
-pyparsing==3.0.4
-pyrsistent==0.18.0
-PySocks==1.7.1
-python-dateutil==2.8.2
-pytz==2021.3
-pyzmq==19.0.2
+# Pygments==2.11.2
+# pyOpenSSL==21.0.0
+# pyparsing==3.0.4
+# pyrsistent==0.18.0
+# PySocks==1.7.1
+# python-dateutil==2.8.2
+# pytz==2021.3
+# pyzmq==19.0.2
 regex==2021.11.2
 requests==2.27.1
 scikit-learn==1.0.2
 scipy==1.7.3
 seaborn==0.11.2
-setuptools==58.0.4
-six==1.16.0
+# setuptools==58.0.4
+# six==1.16.0
 spacy==2.3.5
 # en-core-web-sm==2.3.1
-srsly==1.0.5
-thinc==7.4.5
-threadpoolctl==2.2.0
-tornado==6.1
-tqdm==4.62.3
-traitlets==5.1.1
-typing-extensions==3.10.0.2
+# srsly==1.0.5
+# thinc==7.4.5
+# threadpoolctl==2.2.0
+# tornado==6.1
+# tqdm==4.62.3
+# traitlets==5.1.1
+# typing-extensions==3.10.0.2
 urllib3==1.26.7
-wasabi==0.8.2
-wcwidth==0.2.5
-Werkzeug==2.0.2
-wheel==0.37.1
+# wasabi==0.8.2
+# wcwidth==0.2.5
+# Werkzeug==2.0.2
+# wheel==0.37.1
 wordcloud==1.8.1
-zipp==3.7.0
+# zipp==3.7.0
 gunicorn
